# OCL_GEANT4

./: .gitignore  CMakeLists.txt  G4History.macro  OCL_macro_cmd.txt  README.md  README.txt  generatemacros.sh  init_vis.mac  manyruns.sh  run1.mac  run100.mac  vis.mac
OCL/: .gitattributes  .gitignore  CMakeLists.txt  OCL.cc  PrintSimMacs.cpp  example_batch.mac  example_vis.mac  genAndrunSims.sh  generatemacros.sh  init.mac  init_vis.mac  manyruns.sh  run1.mac  run100.mac  run1779keV.mac  run_133Ba.mac  run_137Cs.mac  run_152Eu.mac  run_60Co.mac  setup_normal_run.mac  setup_rad_source.mac  test.mac  vis.mac  vis_VRML.mac
OCL/Mesh-Models/: SiRi.gdml  frame_outer.gdml  target_chamber.gdml  target_wheel.gdml
OCL/Mesh-Models/Structures/: JMC_006_Detector_Adaptor_Assy_Hex-short_Alu_with_cover-modified.stl  JMC_006_Detector_Adaptor_Assy_Hex-short_Alu_with_cover.stl  JMC_006_Frame_Ring.ply  JMC_006_Frame_Ring.stl  JMC_006_Frame_TopBase.stl  translateRotateSTL.py
OCL/Mesh-Models/Volumes_SiRi/: Siri_assembly_v02_SIMPLE1.gdml  Siri_assembly_v02_SIMPLE2.gdml  Siri_assembly_v02_SIMPLE3.gdml  Siri_assembly_v02_SIMPLE4.gdml  Siri_assembly_v02_SIMPLE5.gdml  Siri_assembly_v02_SIMPLE6.gdml  Siri_assembly_v02_SIMPLE7.gdml  Siri_assembly_v02_SIMPLE8.gdml
OCL/Mesh-Models/Volumes_frame_outer/: JMC_006_Assembly_BallHalf_Dressed_SIMPLE166.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE167.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE168.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE169.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE170.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE171.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE172.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE173.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE174.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE175.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE176.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE177.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE178.gdml  JMC_006_Assembly_BallHalf_Dressed_SIMPLE179.gdml  (+705 more)
OCL/include/: NIFF.hh  OCLAnalysis.hh  OCLCollimator.hh  OCLDetectorConstruction.hh  OCLDetectorMessenger.hh  OCLEventAction.hh  OCLFrame.hh  OCLLaBr3.hh  OCLLaBr3Messenger.hh  OCLMaterials.hh  OCLParallelWorldFrameOuter.hh  OCLParallelWorldSiRi.hh  OCLParallelWorldTargetChamber.hh  OCLParallelWorldTargetWheel.hh  OCLParallelWorldTargetsOnWheel.hh  OCLParameters.hh  OCLPhysicsList.hh  OCLPrimaryGeneratorAction.hh  OCLRunAction.hh  OCLRunMessenger.hh  OCLSteppingAction.hh  OCLTarget.hh  OCLTarget_RadSource.hh  SiRi.hh  TChamberAuspuff.hh
OCL/src/: NIFF.cc  OCLCollimator.cc  OCLDetectorConstruction.cc  OCLDetectorMessenger.cc  OCLEventAction.cc  OCLFrame.cc  OCLLaBr3.cc  OCLLaBr3Messenger.cc  OCLMaterials.cc  OCLParallelWorldFrameOuter.cc  OCLParallelWorldSiRi.cc  OCLParallelWorldTargetChamber.cc  OCLParallelWorldTargetWheel.cc  OCLParallelWorldTargetsOnWheel.cc  OCLPhysicsList.cc  OCLPrimaryGeneratorAction.cc  OCLRunAction.cc  OCLRunMessenger.cc  OCLSteppingAction.cc  OCLTarget.cc  OCLTarget_RadSource.cc  SiRi.cc  SingleScintPrimaryGeneratorAction.cc  TChamberAuspuff.cc
(+216 files in other folders)
